Fixed major alignment and layout issues

--- a/style.css
+++ b/style.css
@@ -1,14 +1,21 @@
 * {
-    font-family: monospace;
     font-weight: bold;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 :root {
-    --main-padding: 10px;
+    --main-padding: 30px;
   }
 
 body {
     margin: 0;
+}
+
+div {
+    display: block;
 }
 
 .container {
@@ -19,13 +26,16 @@ body {
 }
 
 .sidebar {
-    background-color: #7c3aed;
     color: white;
-    grid-area: sidebar;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: var(--main-padding);
+    background-color: #7c3aed;
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    padding: 15px 20px 20px 15px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto 1fr;
+    grid-gap: 35px;
+    list-style-type: none;
 }
 
 img {
@@ -35,8 +45,11 @@ img {
 }
 
 .header {
-    background-color: #f5f3ff;
-    grid-area: header;
+    background-color: white;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    position: relative;
+    box-shadow: 0px 2px 3px rgb(175, 175, 175);
     padding: var(--main-padding);
 }
 
@@ -55,15 +68,39 @@ input[type=text] {
     height: 20px;
 }
 
+.user {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin: 20px 20px 0px 30px;
+}
+
+.user-handle {
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    margin-bottom: 12px;
+    margin-right: 12px;
+}
+
+.btns {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 18px;
+}
+
 button {
     color: white;
     background-color: #7c3aed;
-    border-radius: 50px;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    -ms-border-radius: 50px;
-    -o-border-radius: 50px;
-    padding: var(--main-padding);
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    padding: 20px;
+    font-weight: 500;
+    border: none;
+    margin: 10px;
 }
 
 .user {
@@ -88,6 +125,7 @@ button {
 
 .Projects {
     grid-area: projects;
+    margin-right: 30px;
 }
 
 .Project-Tile {
@@ -114,8 +152,8 @@ button {
 }
 
 .project-desc {
-    font-size: small;
-    font-weight: lighter;
+    font-size: 13px;
+    color: rgb(88, 88, 88)
 }
 
 .Announcements {
@@ -130,6 +168,8 @@ button {
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
+    box-shadow: 0px 2px 3px #afafaf;
+    min-width: 231px
 }
 
 .an-name {
@@ -137,9 +177,13 @@ button {
     font-weight: bolder;
 }
 
+hr {
+    margin: 10px 0 10px 0
+}
+
 .an-desc {
-    font-size: small;
-    font-weight: lighter;
+    font-size: 11px;
+    color: #585858;
 }
 
 .Trending {
